# generative-models

./: .gitignore  assignment01.ipynb  malik_mardan_a1.ipynb  pyproject.toml
a2/: malik_mardan_a2.ipynb
scripts/: install_torch.py
